# iu-creative-prompting-techniques-assignment

./: .env  README.md  example_ppa_prompts.md  pyproject.toml
commons/: aws_s3_helper.py  aws_secrets_manager_helper.py  google_genai_helper.py  qdrant_helper.py  utils.py
document-loader/: qdrant_document_uploader.py  query_qdrant_vector_store.py
fastapi-server/: app.py
